Add Authentication to Dashboard